Avoid usage of Boolean/Character constructors marked for removal